Inplmented GetAllUsers and RegisterUser

--- a/SplitWise/Views/Shared/_Layout.cshtml
+++ b/SplitWise/Views/Shared/_Layout.cshtml
@@ -23,7 +23,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="SplitWise" asp-action="Split">Split</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="SplitWise" asp-action="CreateGroup">Create Group</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SplitWise" asp-action="CreateGroup">CreateGroup</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SplitWise" asp-action="RegisterUser">RegisterUser</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SplitWise" asp-action="GetAllUsers">GetAllUsers</a>
                         </li>
                     </ul>
                 </div>
