implemented login and register

--- a/SplitWise/Views/Home/Index.cshtml
+++ b/SplitWise/Views/Home/Index.cshtml
@@ -1,8 +1,24 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
-}
+    var data = TempData["Navbar"];
+    ViewData["navbar"] = data;
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+}
+<link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+<link href="~/lib/bootstrap/dist/css/bootstrap.rtl.min.css" rel="stylesheet" />
+<link href="~/lib/bootstrap/dist/css/bootstrap.rtl.css" rel="stylesheet" />
+<link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/jquery/dist/jquery.js"></script>
+<script>
+
+    $(document).ready(function () {
+        var d='@ViewData["navbar"]';
+     if(d=="True"){
+         alert("Login Successfull");
+     }
+    });
+
+</script>
+
+<h1>Index</h1>
